# syngen

./: .gitignore  LICENSE.txt  QUICKSTART.md  README.md  VERSION  WEB_UI_GUIDE.md  install.bat  install.sh  makefile  pyproject.toml  quick_out_template.csv  run_web_ui.py  verify_installation.py
docs/: .gitignore  README.md  main.tex  makefile
examples/: basic_usage.py
requirements/: requirements-dev.txt  requirements-doc.txt  requirements.txt
src/syngen/: __init__.py  cli.py
src/syngen/attribute/: base.py
src/syngen/condition/: __init__.py  base.py  distribution.py
src/syngen/dtype/: __init__.py  base.py
src/syngen/input/: base.py
src/syngen/utils/: timer.py
src/syngen/validate_args/: base.py
src/synthetic_generator/: __init__.py  cli.py
src/synthetic_generator/web/static/css/: style.css
src/synthetic_generator/web/static/js/: app.js
src/synthetic_generator/web/templates/: 404.html  500.html  about.html  base.html  export.html  generator.html  index.html  inference.html  templates.html  validation.html
tests/: test_import.py
tests/jupyter_nb/: 01.ipynb  nbutils.py
